second-section small-fix

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ header i {
 i {
   font-size: 19px;
 }
-.HEADD {
+.head {
   display: flex;
   align-items: center;
   gap: 250px;
@@ -254,6 +254,10 @@ i {
   height: 27px;
   border-radius: 25px;
   background-color: rgb(255, 255, 255, 0.6);
+}
+
+.text{
+  max-height: 10px;
 }
 .first {
   width: 244px;
